--- a/src/elements/header-content.html
+++ b/src/elements/header-content.html
@@ -128,7 +128,7 @@
         <animatable-content name="home">
           <div class="container" center-justified>
             <div class="home-wrapper">
-              <iron-image class="logo" src="/images/agm-logo.svg" sizing="contain"
+              <iron-image class="logo" src="/images/logo-color.png" sizing="contain"
                           alt="AGM Costa Brava 2018"></iron-image>
               <h3 class="dates">{$ dates $}</h3>
               <h2 class="motto">{$ motto $}</h2>
@@ -138,9 +138,9 @@
                   {$ playIcon $}
                 </div>
               {% endif %}
-              <div class="action-buttons">
+              <!-- <div class="action-buttons">
                 <paper-button class="primary" on-tap="_scrollToTickets" raised>{$ buyTicket $}</paper-button>
-              </div>
+              </div> -->
             </div>
           </div>
         </animatable-content>
