--- a/src/elements/session-details.html
+++ b/src/elements/session-details.html
@@ -95,7 +95,7 @@
       <paper-toolbar class="tall">
         <paper-icon-button class="back-button" dialog-dismiss icon="arrow-back"></paper-icon-button>
         <div class="middle fallback-image-wrapper">
-          <iron-image class="fallback-image" src="/images/logo-white.svg"
+          <iron-image class="fallback-image" src="/images/logo-white.png"
                       alt="{$ title $}"></iron-image>
         </div>
       </paper-toolbar>
