--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -27,10 +27,10 @@
   <template>
 
     <statistics-block app="{{app}}" cascaded></statistics-block>
-    <featured-people app="{{app}}" people="{{people}}" cascaded></featured-people>
+    <!-- <featured-people app="{{app}}" people="{{people}}" cascaded></featured-people>
     {% if videosSessionsUrl %}
       <featured-videos app="{{app}}" cascaded></featured-videos>
-    {% endif %}
+    {% endif %} -->
     {% if callToAction %}
       <call-to-action app="{{app}}" cascaded></call-to-action>
     {% endif %}
@@ -38,9 +38,9 @@
     {% if gallery %}
       <photo-block app="{{app}}" cascaded></photo-block>
     {% endif %}
-    <tickets-block app="{{app}}" cascaded></tickets-block>
+    <!-- <tickets-block app="{{app}}" cascaded></tickets-block>
     <latest-posts app="{{app}}" posts="{{posts}}" cascaded></latest-posts>
-    <social-feed app="{{app}}" cascaded></social-feed>
+    <social-feed app="{{app}}" cascaded></social-feed> -->
     <map-block app="{{app}}" selected="{{selected}}" cascaded></map-block>
     <logos-block app="{{app}}" cascaded></logos-block>
     <footer-block app="{{app}}" cascaded></footer-block>
