--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta name="apple-mobile-web-app-title" content="{$ title $}">
 
   <!-- Homescreen icons. -->
-  <link rel="shortcut icon" href="/images/favicon/favicon-72.png">
+  <link rel="shortcut icon" href="/images/favicon/favicon.ico">
   <link rel="apple-touch-icon" href="/images/touch/homescreen-48.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/images/touch/homescreen-72.png">
   <link rel="apple-touch-icon" sizes="96x96" href="/images/touch/homescreen-96.png">
