--- a/src/elements/toolbar-block.html
+++ b/src/elements/toolbar-block.html
@@ -156,9 +156,9 @@
           </paper-tabs>
         </template>
 
-        <paper-tab class="signin-tab" on-tap="signIn" hidden$="[[app.user]]">{$ signIn $}</paper-tab>
+        <!-- <paper-tab class="signin-tab" on-tap="signIn" hidden$="[[app.user]]">{$ signIn $}</paper-tab> -->
 
-        <paper-menu-button
+        <!-- <paper-menu-button
           class="auth-menu"
           hidden$="[[!app.user]]"
           vertical-align="top"
@@ -183,13 +183,13 @@
               </div>
             </div>
           </div>
-        </paper-menu-button>
+        </paper-menu-button> -->
 
-        <div class="action-button-wrapper" hidden$="[[app.isPhoneSize]]" layout horizontal center-center>
+        <!-- <div class="action-button-wrapper" hidden$="[[app.isPhoneSize]]" layout horizontal center-center>
           <a href="{$ tickets.url $}" target="_blank" rel="noopener noreferrer" on-tap="_trackBuyClick">
             <paper-button class="action-button">{$ buyTicket $}</paper-button>
           </a>
-        </div>
+        </div> -->
       </div>
     </app-toolbar>
 
