--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -11,25 +11,33 @@
         /* Generate theme at https://www.materialpalette.com */
 
         /* Primary colors */
-        --dark-primary-color:       #F57C00;
-        --default-primary-color:    #FF9800;
-        --light-primary-color:      #FFE0B2;
-        --text-primary-color:       #212121; /* text / icons */
-
-        /* Accent colors */
-        --accent-color:             #03A9F4;
-        --disabled-accent-color:    #4dcfff;
-
-        /* Background colors */
-        --primary-background-color:   #FFE0B2;
-
-        /* Text colors */
+        --dark-primary-color:       #1976D2;
+        --default-primary-color:    #2196F3;
+        --light-primary-color:      #BBDEFB;
+        --text-primary-color:       #FFFFFF;
+        --accent-color:             #536DFE;
+        --primary-background-color: #BBDEFB;
         --primary-text-color:       #212121;
-        --secondary-text-color:     #727272;
+        --secondary-text-color:     #757575;
         --disabled-text-color:      #BDBDBD;
+        --divider-color:            #BDBDBD;
 
-        /* Other colors */
-        --divider-color:            #B6B6B6;
+
+        /* Components */
+
+        /* paper-drawer-panel */
+        --drawer-menu-color:           #ffffff;
+        --drawer-border-color:         1px solid #ccc;
+        --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
+
+        /* paper-menu */
+        --paper-menu-background-color: #fff;
+        --menu-link-color:             #111111;
+
+        /* paper-input */
+        --paper-input-container-color:       rgba(255, 255, 255, 0.64);
+        --paper-input-container-focus-color: rgba(255, 255, 255, 1);
+        --paper-input-container-input-color: #fff;
 
         /* --- End of replace section --- */
 
