Adds more images

--- a/src/elements/mailchimp-subscribe.html
+++ b/src/elements/mailchimp-subscribe.html
@@ -75,7 +75,7 @@
         </div>
         <div class="mc-submit-group">
           <input type="submit" value="{$ subscribe $}" name="subscribe" id="mc-embedded-subscribe"
-                 style="display:none">
+                 style="display:none" disabled>
         </div>
       </form>
     </div>
