--- a/src/elements/header-content.html
+++ b/src/elements/header-content.html
@@ -141,7 +141,7 @@
           <div class="container" center-justified>
             <div class="home-wrapper">
               <iron-image class="logo" src="/images/logo-white.png" sizing="contain" alt="AGM Costa Brava 2018"></iron-image>
-              <h3 class="dates"><span>{$ dates $}</span></h3>
+              <h3 class="dates reveal-text"><span>{$ dates $}</span></h3>
               <h2 class="motto"><span>{$ motto $}</span></h2>
               {% if pages.home.headerSettings.video %}
               <div class="open-video" on-tap="_openVideo">
