--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -224,7 +224,7 @@
           &copy; 2016 Based on <a href="https://github.com/gdg-x/hoverboard" target="_blank" rel="noopener noreferrer">Project
           Hoverboard</a>. Designed and created by <a href="http://o.zasadnyy.com/" target="_blank" rel="noopener noreferrer">Oleh
           Zasadnyy</a> &middot;
-          Customized by <a href="http://javirln.com" target="_blank" rel="noopener noreferrer">Javier Rodriguez</a>
+          Customized by <a href="http://javirln.com" target="_blank" rel="noopener noreferrer"> Javi Rodriguez</a>
         </div>
         <div class="gplus">
           <g:plusone
