--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -221,10 +221,10 @@
       <div class="footer-content footer-bottom">
         <!-- Please do NOT delete next block -->
         <div class="copyright">
-          &copy; 2016 Based on <a href="https://github.com/gdg-x/hoverboard" target="_blank" rel="noopener noreferrer">Project
+          &copy; 2018 Based on <a href="https://github.com/gdg-x/hoverboard" target="_blank" rel="noopener noreferrer">Project
           Hoverboard</a>. Designed and created by <a href="http://o.zasadnyy.com/" target="_blank" rel="noopener noreferrer">Oleh
           Zasadnyy</a> &middot;
-          Customized by <a href="http://javirln.com" target="_blank" rel="noopener noreferrer"> Javi Rodriguez</a>
+          <span>Customized by </span><a href="http://javirln.com" target="_blank" rel="noopener noreferrer"> Javi Rodriguez</a>
         </div>
         <div class="gplus">
           <g:plusone
